--- a/funnypage/jokesapp/templates/jokesapp/index.html
+++ b/funnypage/jokesapp/templates/jokesapp/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <form method="POST">
+        {% csrf_token %}
         <label for="visitorname">Vaše jméno:</label>
         <input type="text" id="visitorname" name="username">
         <button type="submit">Odeslat</button>
